Improve nouveau pci attachment code so it waits for the availability of / before trying to load firmware.

Fixes my PR 54274.

LGTM mrg